Added better auth

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-DATABASE_URL=postgresql://ee8jfb:xau_iXh9wh505fZpuD7EH0ZVuOfO8w2cIfA00@eu-central-1.sql.xata.sh/Schedule:main?sslmode=require
-DIRECT_URL=postgresql://ee8jfb:xau_iXh9wh505fZpuD7EH0ZVuOfO8w2cIfA00@eu-central-1.sql.xata.sh/Schedule:main?sslmode=require
+DATABASE_URL=postgresql://ee8jfb:xau_iXh9wh505fZpuD7EH0ZVuOfO8w2cIfA00@us-east-1.sql.xata.sh/Schedule:main?sslmode=require
+DIRECT_URL=postgresql://ee8jfb:xau_iXh9wh505fZpuD7EH0ZVuOfO8w2cIfA00@us-east-1.sql.xata.sh/Schedule:main?sslmode=require
+
+BETTER_AUTH_SECRET=AwPdSf1b8kazboQWfvRRSXfIPO3K8ZgZ
+BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
+BETTER_AUTH_TRUSTED_ORIGINS="http://localhost:3000,https://example.com" //Add your trusted origins here
+
+GITHUB_CLIENT_ID='Ov23li16wEc6Sf1oG5Vx'
+GITHUB_CLIENT_SECRET="d6491735a854b35df051f101c8dce1d6e6aa0457"
