--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@legendapp/state": "^3.0.0-beta.13",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -30,9 +31,11 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
     "next-themes": "^0.3.0",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
